[gd_scene load_steps=4 format=3 uid="uid://oe3nudqocct7"]

[ext_resource type="Script" path="res://scenes/diamond/diamond.gd" id="1_icmks"]
[ext_resource type="Texture2D" uid="uid://cd7gg0jstaxiy" path="res://assets/sprites/objects/diamong.png" id="1_owjau"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0l44"]
size = Vector2(70, 56)

[node name="Diamond" type="Area2D"]
script = ExtResource("1_icmks")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_owjau")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_m0l44")

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_destruction_timer_timeout"]
